#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Defines
# ######################################################################################################################

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${CMAKE_SOURCE_DIR}/include)

# ######################################################################################################################
# Modules
# ######################################################################################################################

add_subdirectory(logger)
add_subdirectory(migration)
add_subdirectory(utils)
