#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Common include directories
# ######################################################################################################################

include_directories(include)

# ######################################################################################################################
# Add tests
# ######################################################################################################################

add_subdirectory(utils)
add_subdirectory(migration)
add_subdirectory(iamclient)
