#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aoslogger)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES logger.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} PUBLIC aoscommon ${Systemd_LIBRARIES})

target_include_directories(${TARGET} PUBLIC ${AOS_CORE_COMMON_LIB_DIR}/include)

# ######################################################################################################################
# Install
# ######################################################################################################################

install(TARGETS ${TARGET} DESTINATION lib)

install(
    DIRECTORY ${AOS_CORE_COMMON_LIB_DIR}/include/logger
    DESTINATION include
    FILES_MATCHING
    PATTERN "*.hpp"
)
